Add scst debian package to middlewared

--- a/src/middlewared/debian/control
+++ b/src/middlewared/debian/control
@@ -79,6 +79,8 @@ Depends: alembic,
          cryptsetup,
          gawk,
          gdisk,
+         iscsi-scst,
+         jq,
          ipmitool,
          jq,
          krb5-user,
@@ -151,6 +153,8 @@ Depends: alembic,
          rrdcached,
          rsync,
          samba,
+         scst,
+         scstadmin,
          setserial,
          sg3-utils,
          smartmontools,
