Add various attributes for extents

--- a/src/middlewared/middlewared/etc_files/scst.conf
+++ b/src/middlewared/middlewared/etc_files/scst.conf
@@ -9,11 +9,21 @@
 	associated_targets = defaultdict(list)
 	for a_tgt in filter(lambda a: a['extent'] in extents, middleware.call_sync('iscsi.targetextent.query')):
 		associated_targets[a_tgt['target']].append(a_tgt)
+
+	# FIXME: SSD is not being reflected in the initiator, please look into it
 %>\
 HANDLER vdisk_fileio {
 % for extent in extents.values():
 	DEVICE ${extent['name']} {
 		filename ${os.path.join('/dev', extent['disk'])}
+		blocksize ${extent['blocksize']}
+%	if extent['rpm'] != 'SSD':
+		rotational ${extent['rpm']}
+%	endif
+		read_only ${'1' if extent['ro'] else '0'}
+		usn ${extent['serial']}
+		naa_id ${extent['naa']}
+		prod_id "iSCSI Disk"
 	}
 
 % endfor
