--- a/src/middlewared/middlewared/etc_files/scst.conf
+++ b/src/middlewared/middlewared/etc_files/scst.conf
@@ -7,11 +7,13 @@
 	targets = middleware.call_sync('iscsi.target.query')
 	extents = {d['id']: d for d in middleware.call_sync('iscsi.extent.query', [['enabled', '=', True]])}
 	portals = {d['id']: d for d in middleware.call_sync('iscsi.portal.query')}
+	initiators = {d['id']: d for d in middleware.call_sync('iscsi.initiator.query', [['initiators', '!=', []]])}
 	associated_targets = defaultdict(list)
 	for a_tgt in filter(lambda a: a['extent'] in extents, middleware.call_sync('iscsi.targetextent.query')):
 		associated_targets[a_tgt['target']].append(a_tgt)
 
 	# FIXME: SSD is not being reflected in the initiator, please look into it
+	# FIXME: Authorized networks for initiators has not been implemented yet, plesae look for alternatives in SCST
 %>\
 HANDLER vdisk_fileio {
 % for extent in extents.values():
@@ -33,11 +35,16 @@ HANDLER vdisk_fileio {
 TARGET_DRIVER iscsi {
 	enabled 1
 
+<%def name="retrieve_luns(target_id, spacing='')">
+	% for associated_target in associated_targets[target_id]:
+		${spacing}LUN ${associated_target['lunid']} ${extents[associated_target['extent']]['name']}
+	% endfor
+</%def>\
 % for target in targets:
 	TARGET ${global_config['basename']}:${target['name']} {
-%	for associated_target in associated_targets[target['id']]:
-		LUN ${associated_target['lunid']} ${extents[associated_target['extent']]['name']}
-%	endfor
+%	if associated_targets:
+		enabled 1
+%	endif
 %	for group in target['groups']:
 <%
 	addresses = []
@@ -56,9 +63,20 @@ TARGET_DRIVER iscsi {
 		allowed_portal ${addr['ip']}
 		% endfor
 %	endfor
-%	if associated_targets:
-
-		enabled 1
+<%
+	all_luns_allowed = any(g['initiator'] not in initiators for g in target['groups'])
+%>\
+%	if any(g['initiator'] not in initiators for g in target['groups']):
+${retrieve_luns(target['id'])}\
+%	else:
+%		for group in target['groups']:
+		GROUP ${target['name']}_${group['initiator']} {
+%			for initiator in initiators[group['initiator']]['initiators']:
+			INITIATOR ${initiator}
+%			endfor
+${retrieve_luns(target['id'], '\t')}\
+		}
+%		endfor
 %	endif
 	}
 % endfor
