--- a/src/middlewared/middlewared/etc_files/scst.conf
+++ b/src/middlewared/middlewared/etc_files/scst.conf
@@ -12,25 +12,42 @@
 	for a_tgt in filter(lambda a: a['extent'] in extents, middleware.call_sync('iscsi.targetextent.query')):
 		associated_targets[a_tgt['target']].append(a_tgt)
 
+	# Let's map extents to respective ios
+	extents_io = {'vdisk_fileio': [], 'vdisk_blockio': [], 'dev_disk': []}
+	for extent in extents.values():
+		if extent['type'] == 'DISK':
+			if extent['path'].startswith('zvol'):
+				extent['extent_path'] = os.path.join('/dev', extent['disk'])
+				extents_io['vdisk_blockio'].append(extent)
+			else:
+				extent['extent_path'] = os.path.join('/dev', extent['disk'])
+				extents_io['vdisk_blockio'].append(extent)
+				# dev_disk is pass-through which we would be using for disks
+				# FIXME: It however is showing kernel bugs - investigate please
+		else:
+			extent['extent_path'] = extent['path']
+			extents_io['vdisk_fileio'].append(extent)
 	# FIXME: SSD is not being reflected in the initiator, please look into it
 	# FIXME: Authorized networks for initiators has not been implemented yet, plesae look for alternatives in SCST
 %>\
-HANDLER vdisk_fileio {
-% for extent in extents.values():
+% for handler in filter(lambda k: extents_io[k], extents_io):
+HANDLER ${handler} {
+%	for extent in extents_io[handler]:
 	DEVICE ${extent['name']} {
-		filename ${os.path.join('/dev', extent['disk'])}
+		filename ${extent['extent_path']}
 		blocksize ${extent['blocksize']}
-%	if extent['rpm'] != 'SSD':
-		rotational ${extent['rpm']}
-%	endif
 		read_only ${'1' if extent['ro'] else '0'}
 		usn ${extent['serial']}
 		naa_id ${extent['naa']}
 		prod_id "iSCSI Disk"
+%		if extent['rpm'] != 'SSD':
+		rotational ${extent['rpm']}
+%		endif
 	}
 
-% endfor
+%	endfor
 }
+% endfor
 
 TARGET_DRIVER iscsi {
 	enabled 1
