--- a/src/middlewared/middlewared/etc_files/scst.conf
+++ b/src/middlewared/middlewared/etc_files/scst.conf
@@ -16,19 +16,16 @@
 	extents_io = {'vdisk_fileio': [], 'vdisk_blockio': [], 'dev_disk': []}
 	for extent in extents.values():
 		if extent['type'] == 'DISK':
-			if extent['path'].startswith('zvol'):
-				extent['extent_path'] = os.path.join('/dev', extent['disk'])
-				extents_io['vdisk_blockio'].append(extent)
-			else:
-				extent['extent_path'] = os.path.join('/dev', extent['disk'])
-				extents_io['vdisk_blockio'].append(extent)
-				# dev_disk is pass-through which we would be using for disks
-				# FIXME: It however is showing kernel bugs - investigate please
+			extent['extent_path'] = os.path.join('/dev', extent['disk'])
+			extents_io['vdisk_blockio'].append(extent)
+			# dev_disk is pass-through which we would be using for disks
+			# FIXME: It is however showing kernel dumps
+			# So for now we use blockio for disks as well
 		else:
 			extent['extent_path'] = extent['path']
 			extents_io['vdisk_fileio'].append(extent)
 	# FIXME: SSD is not being reflected in the initiator, please look into it
-	# FIXME: Authorized networks for initiators has not been implemented yet, plesae look for alternatives in SCST
+	# FIXME: Authorized networks for initiators has not been implemented yet, please look for alternatives in SCST
 %>\
 % for handler in filter(lambda k: extents_io[k], extents_io):
 HANDLER ${handler} {
@@ -80,9 +77,6 @@ TARGET_DRIVER iscsi {
 		allowed_portal ${addr['ip']}
 		% endfor
 %	endfor
-<%
-	all_luns_allowed = any(g['initiator'] not in initiators for g in target['groups'])
-%>\
 %	if any(g['initiator'] not in initiators for g in target['groups']):
 ${retrieve_luns(target['id'])}\
 %	else:
